--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    cool
+		    up/down arrow = accelerate/reverse accelerate
+		    <br>
+		    left/right arrow = turn ship left/right
+		    <br>
+		    x = hyperspace
+		    <br>
+		    f = shoot
 	    </footer>
 	</body>
 </html>
